Se crean metodos get para juego y usuarios, se optimizan imports y se reorganiza codigo